samples/_failures_safe/1761465537_94fb0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7eb46c71.c: In function ‘main’:
./samples/SAFE/__tmp_7eb46c71.c:161:17: error: ‘add’ undeclared (first use in this function)
  161 |             if (add
      |                 ^~~
./samples/SAFE/__tmp_7eb46c71.c:161:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7eb46c71.c:161:20: error: expected ‘)’ at end of input
  161 |             if (add
      |                ~   ^
      |                    )
./samples/SAFE/__tmp_7eb46c71.c:161:13: error: expected declaration or statement at end of input
  161 |             if (add
      |             ^~
./samples/SAFE/__tmp_7eb46c71.c:161:13: error: expected declaration or statement at end of input
